parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AND
    COLON
    ELSE
    IN
    NOT
    OR
    TO

Grammar

Rule 0     S' -> program
Rule 1     program -> statement
Rule 2     program -> statement program
Rule 3     statement -> assignment
Rule 4     statement -> print_statement
Rule 5     statement -> if_statement
Rule 6     statement -> while_statement
Rule 7     statement -> for_statement
Rule 8     statement -> function_definition
Rule 9     statement -> function_call
Rule 10    if_statement -> IF expression LBRACE program RBRACE
Rule 11    while_statement -> WHILE expression LBRACE program RBRACE
Rule 12    for_statement -> FOR LPAREN assignment SEMICOLON comparison SEMICOLON assignment RPAREN LBRACE program RBRACE
Rule 13    assignment -> VARIABLE ASSIGN expression
Rule 14    function_definition -> FUNCTION VARIABLE LPAREN variable_list RPAREN LBRACE program RBRACE
Rule 15    function_call -> VARIABLE LPAREN argument_list RPAREN
Rule 16    print_statement -> PRINT LPAREN expression RPAREN
Rule 17    expression -> INTEGER
Rule 18    expression -> VARIABLE
Rule 19    expression -> STRING
Rule 20    expression -> comparison
Rule 21    expression -> function_call
Rule 22    expression -> expression PLUS expression
Rule 23    expression -> expression MINUS expression
Rule 24    expression -> expression TIMES expression
Rule 25    expression -> expression DIVIDE expression
Rule 26    expression -> expression MODULO expression
Rule 27    expression -> LPAREN expression RPAREN
Rule 28    comparison -> expression LT expression
Rule 29    comparison -> expression LE expression
Rule 30    comparison -> expression GT expression
Rule 31    comparison -> expression GE expression
Rule 32    comparison -> expression EQ expression
Rule 33    comparison -> expression NE expression
Rule 34    variable_list -> VARIABLE
Rule 35    variable_list -> variable_list COMMA VARIABLE
Rule 36    argument_list -> expression
Rule 37    argument_list -> argument_list COMMA expression

Terminals, with rules where they appear

AND                  : 
ASSIGN               : 13
COLON                : 
COMMA                : 35 37
DIVIDE               : 25
ELSE                 : 
EQ                   : 32
FOR                  : 12
FUNCTION             : 14
GE                   : 31
GT                   : 30
IF                   : 10
IN                   : 
INTEGER              : 17
LBRACE               : 10 11 12 14
LE                   : 29
LPAREN               : 12 14 15 16 27
LT                   : 28
MINUS                : 23
MODULO               : 26
NE                   : 33
NOT                  : 
OR                   : 
PLUS                 : 22
PRINT                : 16
RBRACE               : 10 11 12 14
RPAREN               : 12 14 15 16 27
SEMICOLON            : 12 12
STRING               : 19
TIMES                : 24
TO                   : 
VARIABLE             : 13 14 15 18 34 35
WHILE                : 11
error                : 

Nonterminals, with rules where they appear

argument_list        : 15 37
assignment           : 3 12 12
comparison           : 12 20
expression           : 10 11 13 16 22 22 23 23 24 24 25 25 26 26 27 28 28 29 29 30 30 31 31 32 32 33 33 36 37
for_statement        : 7
function_call        : 9 21
function_definition  : 8
if_statement         : 5
print_statement      : 4
program              : 2 10 11 12 14 0
statement            : 1 2
variable_list        : 14 35
while_statement      : 6

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement
    (2) program -> . statement program
    (3) statement -> . assignment
    (4) statement -> . print_statement
    (5) statement -> . if_statement
    (6) statement -> . while_statement
    (7) statement -> . for_statement
    (8) statement -> . function_definition
    (9) statement -> . function_call
    (13) assignment -> . VARIABLE ASSIGN expression
    (16) print_statement -> . PRINT LPAREN expression RPAREN
    (10) if_statement -> . IF expression LBRACE program RBRACE
    (11) while_statement -> . WHILE expression LBRACE program RBRACE
    (12) for_statement -> . FOR LPAREN assignment SEMICOLON comparison SEMICOLON assignment RPAREN LBRACE program RBRACE
    (14) function_definition -> . FUNCTION VARIABLE LPAREN variable_list RPAREN LBRACE program RBRACE
    (15) function_call -> . VARIABLE LPAREN argument_list RPAREN

    VARIABLE        shift and go to state 10
    PRINT           shift and go to state 11
    IF              shift and go to state 12
    WHILE           shift and go to state 13
    FOR             shift and go to state 14
    FUNCTION        shift and go to state 15

    program                        shift and go to state 1
    statement                      shift and go to state 2
    assignment                     shift and go to state 3
    print_statement                shift and go to state 4
    if_statement                   shift and go to state 5
    while_statement                shift and go to state 6
    for_statement                  shift and go to state 7
    function_definition            shift and go to state 8
    function_call                  shift and go to state 9

state 1

    (0) S' -> program .



state 2

    (1) program -> statement .
    (2) program -> statement . program
    (1) program -> . statement
    (2) program -> . statement program
    (3) statement -> . assignment
    (4) statement -> . print_statement
    (5) statement -> . if_statement
    (6) statement -> . while_statement
    (7) statement -> . for_statement
    (8) statement -> . function_definition
    (9) statement -> . function_call
    (13) assignment -> . VARIABLE ASSIGN expression
    (16) print_statement -> . PRINT LPAREN expression RPAREN
    (10) if_statement -> . IF expression LBRACE program RBRACE
    (11) while_statement -> . WHILE expression LBRACE program RBRACE
    (12) for_statement -> . FOR LPAREN assignment SEMICOLON comparison SEMICOLON assignment RPAREN LBRACE program RBRACE
    (14) function_definition -> . FUNCTION VARIABLE LPAREN variable_list RPAREN LBRACE program RBRACE
    (15) function_call -> . VARIABLE LPAREN argument_list RPAREN

    $end            reduce using rule 1 (program -> statement .)
    RBRACE          reduce using rule 1 (program -> statement .)
    VARIABLE        shift and go to state 10
    PRINT           shift and go to state 11
    IF              shift and go to state 12
    WHILE           shift and go to state 13
    FOR             shift and go to state 14
    FUNCTION        shift and go to state 15

    statement                      shift and go to state 2
    program                        shift and go to state 16
    assignment                     shift and go to state 3
    print_statement                shift and go to state 4
    if_statement                   shift and go to state 5
    while_statement                shift and go to state 6
    for_statement                  shift and go to state 7
    function_definition            shift and go to state 8
    function_call                  shift and go to state 9

state 3

    (3) statement -> assignment .

    VARIABLE        reduce using rule 3 (statement -> assignment .)
    PRINT           reduce using rule 3 (statement -> assignment .)
    IF              reduce using rule 3 (statement -> assignment .)
    WHILE           reduce using rule 3 (statement -> assignment .)
    FOR             reduce using rule 3 (statement -> assignment .)
    FUNCTION        reduce using rule 3 (statement -> assignment .)
    $end            reduce using rule 3 (statement -> assignment .)
    RBRACE          reduce using rule 3 (statement -> assignment .)


state 4

    (4) statement -> print_statement .

    VARIABLE        reduce using rule 4 (statement -> print_statement .)
    PRINT           reduce using rule 4 (statement -> print_statement .)
    IF              reduce using rule 4 (statement -> print_statement .)
    WHILE           reduce using rule 4 (statement -> print_statement .)
    FOR             reduce using rule 4 (statement -> print_statement .)
    FUNCTION        reduce using rule 4 (statement -> print_statement .)
    $end            reduce using rule 4 (statement -> print_statement .)
    RBRACE          reduce using rule 4 (statement -> print_statement .)


state 5

    (5) statement -> if_statement .

    VARIABLE        reduce using rule 5 (statement -> if_statement .)
    PRINT           reduce using rule 5 (statement -> if_statement .)
    IF              reduce using rule 5 (statement -> if_statement .)
    WHILE           reduce using rule 5 (statement -> if_statement .)
    FOR             reduce using rule 5 (statement -> if_statement .)
    FUNCTION        reduce using rule 5 (statement -> if_statement .)
    $end            reduce using rule 5 (statement -> if_statement .)
    RBRACE          reduce using rule 5 (statement -> if_statement .)


state 6

    (6) statement -> while_statement .

    VARIABLE        reduce using rule 6 (statement -> while_statement .)
    PRINT           reduce using rule 6 (statement -> while_statement .)
    IF              reduce using rule 6 (statement -> while_statement .)
    WHILE           reduce using rule 6 (statement -> while_statement .)
    FOR             reduce using rule 6 (statement -> while_statement .)
    FUNCTION        reduce using rule 6 (statement -> while_statement .)
    $end            reduce using rule 6 (statement -> while_statement .)
    RBRACE          reduce using rule 6 (statement -> while_statement .)


state 7

    (7) statement -> for_statement .

    VARIABLE        reduce using rule 7 (statement -> for_statement .)
    PRINT           reduce using rule 7 (statement -> for_statement .)
    IF              reduce using rule 7 (statement -> for_statement .)
    WHILE           reduce using rule 7 (statement -> for_statement .)
    FOR             reduce using rule 7 (statement -> for_statement .)
    FUNCTION        reduce using rule 7 (statement -> for_statement .)
    $end            reduce using rule 7 (statement -> for_statement .)
    RBRACE          reduce using rule 7 (statement -> for_statement .)


state 8

    (8) statement -> function_definition .

    VARIABLE        reduce using rule 8 (statement -> function_definition .)
    PRINT           reduce using rule 8 (statement -> function_definition .)
    IF              reduce using rule 8 (statement -> function_definition .)
    WHILE           reduce using rule 8 (statement -> function_definition .)
    FOR             reduce using rule 8 (statement -> function_definition .)
    FUNCTION        reduce using rule 8 (statement -> function_definition .)
    $end            reduce using rule 8 (statement -> function_definition .)
    RBRACE          reduce using rule 8 (statement -> function_definition .)


state 9

    (9) statement -> function_call .

    VARIABLE        reduce using rule 9 (statement -> function_call .)
    PRINT           reduce using rule 9 (statement -> function_call .)
    IF              reduce using rule 9 (statement -> function_call .)
    WHILE           reduce using rule 9 (statement -> function_call .)
    FOR             reduce using rule 9 (statement -> function_call .)
    FUNCTION        reduce using rule 9 (statement -> function_call .)
    $end            reduce using rule 9 (statement -> function_call .)
    RBRACE          reduce using rule 9 (statement -> function_call .)


state 10

    (13) assignment -> VARIABLE . ASSIGN expression
    (15) function_call -> VARIABLE . LPAREN argument_list RPAREN

    ASSIGN          shift and go to state 17
    LPAREN          shift and go to state 18


state 11

    (16) print_statement -> PRINT . LPAREN expression RPAREN

    LPAREN          shift and go to state 19


state 12

    (10) if_statement -> IF . expression LBRACE program RBRACE
    (17) expression -> . INTEGER
    (18) expression -> . VARIABLE
    (19) expression -> . STRING
    (20) expression -> . comparison
    (21) expression -> . function_call
    (22) expression -> . expression PLUS expression
    (23) expression -> . expression MINUS expression
    (24) expression -> . expression TIMES expression
    (25) expression -> . expression DIVIDE expression
    (26) expression -> . expression MODULO expression
    (27) expression -> . LPAREN expression RPAREN
    (28) comparison -> . expression LT expression
    (29) comparison -> . expression LE expression
    (30) comparison -> . expression GT expression
    (31) comparison -> . expression GE expression
    (32) comparison -> . expression EQ expression
    (33) comparison -> . expression NE expression
    (15) function_call -> . VARIABLE LPAREN argument_list RPAREN

    INTEGER         shift and go to state 21
    VARIABLE        shift and go to state 22
    STRING          shift and go to state 23
    LPAREN          shift and go to state 26

    expression                     shift and go to state 20
    comparison                     shift and go to state 24
    function_call                  shift and go to state 25

state 13

    (11) while_statement -> WHILE . expression LBRACE program RBRACE
    (17) expression -> . INTEGER
    (18) expression -> . VARIABLE
    (19) expression -> . STRING
    (20) expression -> . comparison
    (21) expression -> . function_call
    (22) expression -> . expression PLUS expression
    (23) expression -> . expression MINUS expression
    (24) expression -> . expression TIMES expression
    (25) expression -> . expression DIVIDE expression
    (26) expression -> . expression MODULO expression
    (27) expression -> . LPAREN expression RPAREN
    (28) comparison -> . expression LT expression
    (29) comparison -> . expression LE expression
    (30) comparison -> . expression GT expression
    (31) comparison -> . expression GE expression
    (32) comparison -> . expression EQ expression
    (33) comparison -> . expression NE expression
    (15) function_call -> . VARIABLE LPAREN argument_list RPAREN

    INTEGER         shift and go to state 21
    VARIABLE        shift and go to state 22
    STRING          shift and go to state 23
    LPAREN          shift and go to state 26

    expression                     shift and go to state 27
    comparison                     shift and go to state 24
    function_call                  shift and go to state 25

state 14

    (12) for_statement -> FOR . LPAREN assignment SEMICOLON comparison SEMICOLON assignment RPAREN LBRACE program RBRACE

    LPAREN          shift and go to state 28


state 15

    (14) function_definition -> FUNCTION . VARIABLE LPAREN variable_list RPAREN LBRACE program RBRACE

    VARIABLE        shift and go to state 29


state 16

    (2) program -> statement program .

    $end            reduce using rule 2 (program -> statement program .)
    RBRACE          reduce using rule 2 (program -> statement program .)


state 17

    (13) assignment -> VARIABLE ASSIGN . expression
    (17) expression -> . INTEGER
    (18) expression -> . VARIABLE
    (19) expression -> . STRING
    (20) expression -> . comparison
    (21) expression -> . function_call
    (22) expression -> . expression PLUS expression
    (23) expression -> . expression MINUS expression
    (24) expression -> . expression TIMES expression
    (25) expression -> . expression DIVIDE expression
    (26) expression -> . expression MODULO expression
    (27) expression -> . LPAREN expression RPAREN
    (28) comparison -> . expression LT expression
    (29) comparison -> . expression LE expression
    (30) comparison -> . expression GT expression
    (31) comparison -> . expression GE expression
    (32) comparison -> . expression EQ expression
    (33) comparison -> . expression NE expression
    (15) function_call -> . VARIABLE LPAREN argument_list RPAREN

    INTEGER         shift and go to state 21
    VARIABLE        shift and go to state 22
    STRING          shift and go to state 23
    LPAREN          shift and go to state 26

    expression                     shift and go to state 30
    comparison                     shift and go to state 24
    function_call                  shift and go to state 25

state 18

    (15) function_call -> VARIABLE LPAREN . argument_list RPAREN
    (36) argument_list -> . expression
    (37) argument_list -> . argument_list COMMA expression
    (17) expression -> . INTEGER
    (18) expression -> . VARIABLE
    (19) expression -> . STRING
    (20) expression -> . comparison
    (21) expression -> . function_call
    (22) expression -> . expression PLUS expression
    (23) expression -> . expression MINUS expression
    (24) expression -> . expression TIMES expression
    (25) expression -> . expression DIVIDE expression
    (26) expression -> . expression MODULO expression
    (27) expression -> . LPAREN expression RPAREN
    (28) comparison -> . expression LT expression
    (29) comparison -> . expression LE expression
    (30) comparison -> . expression GT expression
    (31) comparison -> . expression GE expression
    (32) comparison -> . expression EQ expression
    (33) comparison -> . expression NE expression
    (15) function_call -> . VARIABLE LPAREN argument_list RPAREN

    INTEGER         shift and go to state 21
    VARIABLE        shift and go to state 22
    STRING          shift and go to state 23
    LPAREN          shift and go to state 26

    argument_list                  shift and go to state 31
    expression                     shift and go to state 32
    comparison                     shift and go to state 24
    function_call                  shift and go to state 25

state 19

    (16) print_statement -> PRINT LPAREN . expression RPAREN
    (17) expression -> . INTEGER
    (18) expression -> . VARIABLE
    (19) expression -> . STRING
    (20) expression -> . comparison
    (21) expression -> . function_call
    (22) expression -> . expression PLUS expression
    (23) expression -> . expression MINUS expression
    (24) expression -> . expression TIMES expression
    (25) expression -> . expression DIVIDE expression
    (26) expression -> . expression MODULO expression
    (27) expression -> . LPAREN expression RPAREN
    (28) comparison -> . expression LT expression
    (29) comparison -> . expression LE expression
    (30) comparison -> . expression GT expression
    (31) comparison -> . expression GE expression
    (32) comparison -> . expression EQ expression
    (33) comparison -> . expression NE expression
    (15) function_call -> . VARIABLE LPAREN argument_list RPAREN

    INTEGER         shift and go to state 21
    VARIABLE        shift and go to state 22
    STRING          shift and go to state 23
    LPAREN          shift and go to state 26

    expression                     shift and go to state 33
    comparison                     shift and go to state 24
    function_call                  shift and go to state 25

state 20

    (10) if_statement -> IF expression . LBRACE program RBRACE
    (22) expression -> expression . PLUS expression
    (23) expression -> expression . MINUS expression
    (24) expression -> expression . TIMES expression
    (25) expression -> expression . DIVIDE expression
    (26) expression -> expression . MODULO expression
    (28) comparison -> expression . LT expression
    (29) comparison -> expression . LE expression
    (30) comparison -> expression . GT expression
    (31) comparison -> expression . GE expression
    (32) comparison -> expression . EQ expression
    (33) comparison -> expression . NE expression

    LBRACE          shift and go to state 34
    PLUS            shift and go to state 35
    MINUS           shift and go to state 36
    TIMES           shift and go to state 37
    DIVIDE          shift and go to state 38
    MODULO          shift and go to state 39
    LT              shift and go to state 40
    LE              shift and go to state 41
    GT              shift and go to state 42
    GE              shift and go to state 43
    EQ              shift and go to state 44
    NE              shift and go to state 45


state 21

    (17) expression -> INTEGER .

    LBRACE          reduce using rule 17 (expression -> INTEGER .)
    PLUS            reduce using rule 17 (expression -> INTEGER .)
    MINUS           reduce using rule 17 (expression -> INTEGER .)
    TIMES           reduce using rule 17 (expression -> INTEGER .)
    DIVIDE          reduce using rule 17 (expression -> INTEGER .)
    MODULO          reduce using rule 17 (expression -> INTEGER .)
    LT              reduce using rule 17 (expression -> INTEGER .)
    LE              reduce using rule 17 (expression -> INTEGER .)
    GT              reduce using rule 17 (expression -> INTEGER .)
    GE              reduce using rule 17 (expression -> INTEGER .)
    EQ              reduce using rule 17 (expression -> INTEGER .)
    NE              reduce using rule 17 (expression -> INTEGER .)
    VARIABLE        reduce using rule 17 (expression -> INTEGER .)
    PRINT           reduce using rule 17 (expression -> INTEGER .)
    IF              reduce using rule 17 (expression -> INTEGER .)
    WHILE           reduce using rule 17 (expression -> INTEGER .)
    FOR             reduce using rule 17 (expression -> INTEGER .)
    FUNCTION        reduce using rule 17 (expression -> INTEGER .)
    $end            reduce using rule 17 (expression -> INTEGER .)
    RBRACE          reduce using rule 17 (expression -> INTEGER .)
    SEMICOLON       reduce using rule 17 (expression -> INTEGER .)
    RPAREN          reduce using rule 17 (expression -> INTEGER .)
    COMMA           reduce using rule 17 (expression -> INTEGER .)


state 22

    (18) expression -> VARIABLE .
    (15) function_call -> VARIABLE . LPAREN argument_list RPAREN

    LBRACE          reduce using rule 18 (expression -> VARIABLE .)
    PLUS            reduce using rule 18 (expression -> VARIABLE .)
    MINUS           reduce using rule 18 (expression -> VARIABLE .)
    TIMES           reduce using rule 18 (expression -> VARIABLE .)
    DIVIDE          reduce using rule 18 (expression -> VARIABLE .)
    MODULO          reduce using rule 18 (expression -> VARIABLE .)
    LT              reduce using rule 18 (expression -> VARIABLE .)
    LE              reduce using rule 18 (expression -> VARIABLE .)
    GT              reduce using rule 18 (expression -> VARIABLE .)
    GE              reduce using rule 18 (expression -> VARIABLE .)
    EQ              reduce using rule 18 (expression -> VARIABLE .)
    NE              reduce using rule 18 (expression -> VARIABLE .)
    VARIABLE        reduce using rule 18 (expression -> VARIABLE .)
    PRINT           reduce using rule 18 (expression -> VARIABLE .)
    IF              reduce using rule 18 (expression -> VARIABLE .)
    WHILE           reduce using rule 18 (expression -> VARIABLE .)
    FOR             reduce using rule 18 (expression -> VARIABLE .)
    FUNCTION        reduce using rule 18 (expression -> VARIABLE .)
    $end            reduce using rule 18 (expression -> VARIABLE .)
    RBRACE          reduce using rule 18 (expression -> VARIABLE .)
    SEMICOLON       reduce using rule 18 (expression -> VARIABLE .)
    RPAREN          reduce using rule 18 (expression -> VARIABLE .)
    COMMA           reduce using rule 18 (expression -> VARIABLE .)
    LPAREN          shift and go to state 18


state 23

    (19) expression -> STRING .

    LBRACE          reduce using rule 19 (expression -> STRING .)
    PLUS            reduce using rule 19 (expression -> STRING .)
    MINUS           reduce using rule 19 (expression -> STRING .)
    TIMES           reduce using rule 19 (expression -> STRING .)
    DIVIDE          reduce using rule 19 (expression -> STRING .)
    MODULO          reduce using rule 19 (expression -> STRING .)
    LT              reduce using rule 19 (expression -> STRING .)
    LE              reduce using rule 19 (expression -> STRING .)
    GT              reduce using rule 19 (expression -> STRING .)
    GE              reduce using rule 19 (expression -> STRING .)
    EQ              reduce using rule 19 (expression -> STRING .)
    NE              reduce using rule 19 (expression -> STRING .)
    VARIABLE        reduce using rule 19 (expression -> STRING .)
    PRINT           reduce using rule 19 (expression -> STRING .)
    IF              reduce using rule 19 (expression -> STRING .)
    WHILE           reduce using rule 19 (expression -> STRING .)
    FOR             reduce using rule 19 (expression -> STRING .)
    FUNCTION        reduce using rule 19 (expression -> STRING .)
    $end            reduce using rule 19 (expression -> STRING .)
    RBRACE          reduce using rule 19 (expression -> STRING .)
    SEMICOLON       reduce using rule 19 (expression -> STRING .)
    RPAREN          reduce using rule 19 (expression -> STRING .)
    COMMA           reduce using rule 19 (expression -> STRING .)


state 24

    (20) expression -> comparison .

    LBRACE          reduce using rule 20 (expression -> comparison .)
    PLUS            reduce using rule 20 (expression -> comparison .)
    MINUS           reduce using rule 20 (expression -> comparison .)
    TIMES           reduce using rule 20 (expression -> comparison .)
    DIVIDE          reduce using rule 20 (expression -> comparison .)
    MODULO          reduce using rule 20 (expression -> comparison .)
    LT              reduce using rule 20 (expression -> comparison .)
    LE              reduce using rule 20 (expression -> comparison .)
    GT              reduce using rule 20 (expression -> comparison .)
    GE              reduce using rule 20 (expression -> comparison .)
    EQ              reduce using rule 20 (expression -> comparison .)
    NE              reduce using rule 20 (expression -> comparison .)
    VARIABLE        reduce using rule 20 (expression -> comparison .)
    PRINT           reduce using rule 20 (expression -> comparison .)
    IF              reduce using rule 20 (expression -> comparison .)
    WHILE           reduce using rule 20 (expression -> comparison .)
    FOR             reduce using rule 20 (expression -> comparison .)
    FUNCTION        reduce using rule 20 (expression -> comparison .)
    $end            reduce using rule 20 (expression -> comparison .)
    RBRACE          reduce using rule 20 (expression -> comparison .)
    SEMICOLON       reduce using rule 20 (expression -> comparison .)
    RPAREN          reduce using rule 20 (expression -> comparison .)
    COMMA           reduce using rule 20 (expression -> comparison .)


state 25

    (21) expression -> function_call .

    LBRACE          reduce using rule 21 (expression -> function_call .)
    PLUS            reduce using rule 21 (expression -> function_call .)
    MINUS           reduce using rule 21 (expression -> function_call .)
    TIMES           reduce using rule 21 (expression -> function_call .)
    DIVIDE          reduce using rule 21 (expression -> function_call .)
    MODULO          reduce using rule 21 (expression -> function_call .)
    LT              reduce using rule 21 (expression -> function_call .)
    LE              reduce using rule 21 (expression -> function_call .)
    GT              reduce using rule 21 (expression -> function_call .)
    GE              reduce using rule 21 (expression -> function_call .)
    EQ              reduce using rule 21 (expression -> function_call .)
    NE              reduce using rule 21 (expression -> function_call .)
    VARIABLE        reduce using rule 21 (expression -> function_call .)
    PRINT           reduce using rule 21 (expression -> function_call .)
    IF              reduce using rule 21 (expression -> function_call .)
    WHILE           reduce using rule 21 (expression -> function_call .)
    FOR             reduce using rule 21 (expression -> function_call .)
    FUNCTION        reduce using rule 21 (expression -> function_call .)
    $end            reduce using rule 21 (expression -> function_call .)
    RBRACE          reduce using rule 21 (expression -> function_call .)
    SEMICOLON       reduce using rule 21 (expression -> function_call .)
    RPAREN          reduce using rule 21 (expression -> function_call .)
    COMMA           reduce using rule 21 (expression -> function_call .)


state 26

    (27) expression -> LPAREN . expression RPAREN
    (17) expression -> . INTEGER
    (18) expression -> . VARIABLE
    (19) expression -> . STRING
    (20) expression -> . comparison
    (21) expression -> . function_call
    (22) expression -> . expression PLUS expression
    (23) expression -> . expression MINUS expression
    (24) expression -> . expression TIMES expression
    (25) expression -> . expression DIVIDE expression
    (26) expression -> . expression MODULO expression
    (27) expression -> . LPAREN expression RPAREN
    (28) comparison -> . expression LT expression
    (29) comparison -> . expression LE expression
    (30) comparison -> . expression GT expression
    (31) comparison -> . expression GE expression
    (32) comparison -> . expression EQ expression
    (33) comparison -> . expression NE expression
    (15) function_call -> . VARIABLE LPAREN argument_list RPAREN

    INTEGER         shift and go to state 21
    VARIABLE        shift and go to state 22
    STRING          shift and go to state 23
    LPAREN          shift and go to state 26

    expression                     shift and go to state 46
    comparison                     shift and go to state 24
    function_call                  shift and go to state 25

state 27

    (11) while_statement -> WHILE expression . LBRACE program RBRACE
    (22) expression -> expression . PLUS expression
    (23) expression -> expression . MINUS expression
    (24) expression -> expression . TIMES expression
    (25) expression -> expression . DIVIDE expression
    (26) expression -> expression . MODULO expression
    (28) comparison -> expression . LT expression
    (29) comparison -> expression . LE expression
    (30) comparison -> expression . GT expression
    (31) comparison -> expression . GE expression
    (32) comparison -> expression . EQ expression
    (33) comparison -> expression . NE expression

    LBRACE          shift and go to state 47
    PLUS            shift and go to state 35
    MINUS           shift and go to state 36
    TIMES           shift and go to state 37
    DIVIDE          shift and go to state 38
    MODULO          shift and go to state 39
    LT              shift and go to state 40
    LE              shift and go to state 41
    GT              shift and go to state 42
    GE              shift and go to state 43
    EQ              shift and go to state 44
    NE              shift and go to state 45


state 28

    (12) for_statement -> FOR LPAREN . assignment SEMICOLON comparison SEMICOLON assignment RPAREN LBRACE program RBRACE
    (13) assignment -> . VARIABLE ASSIGN expression

    VARIABLE        shift and go to state 49

    assignment                     shift and go to state 48

state 29

    (14) function_definition -> FUNCTION VARIABLE . LPAREN variable_list RPAREN LBRACE program RBRACE

    LPAREN          shift and go to state 50


state 30

    (13) assignment -> VARIABLE ASSIGN expression .
    (22) expression -> expression . PLUS expression
    (23) expression -> expression . MINUS expression
    (24) expression -> expression . TIMES expression
    (25) expression -> expression . DIVIDE expression
    (26) expression -> expression . MODULO expression
    (28) comparison -> expression . LT expression
    (29) comparison -> expression . LE expression
    (30) comparison -> expression . GT expression
    (31) comparison -> expression . GE expression
    (32) comparison -> expression . EQ expression
    (33) comparison -> expression . NE expression

    VARIABLE        reduce using rule 13 (assignment -> VARIABLE ASSIGN expression .)
    PRINT           reduce using rule 13 (assignment -> VARIABLE ASSIGN expression .)
    IF              reduce using rule 13 (assignment -> VARIABLE ASSIGN expression .)
    WHILE           reduce using rule 13 (assignment -> VARIABLE ASSIGN expression .)
    FOR             reduce using rule 13 (assignment -> VARIABLE ASSIGN expression .)
    FUNCTION        reduce using rule 13 (assignment -> VARIABLE ASSIGN expression .)
    $end            reduce using rule 13 (assignment -> VARIABLE ASSIGN expression .)
    RBRACE          reduce using rule 13 (assignment -> VARIABLE ASSIGN expression .)
    SEMICOLON       reduce using rule 13 (assignment -> VARIABLE ASSIGN expression .)
    RPAREN          reduce using rule 13 (assignment -> VARIABLE ASSIGN expression .)
    PLUS            shift and go to state 35
    MINUS           shift and go to state 36
    TIMES           shift and go to state 37
    DIVIDE          shift and go to state 38
    MODULO          shift and go to state 39
    LT              shift and go to state 40
    LE              shift and go to state 41
    GT              shift and go to state 42
    GE              shift and go to state 43
    EQ              shift and go to state 44
    NE              shift and go to state 45


state 31

    (15) function_call -> VARIABLE LPAREN argument_list . RPAREN
    (37) argument_list -> argument_list . COMMA expression

    RPAREN          shift and go to state 51
    COMMA           shift and go to state 52


state 32

    (36) argument_list -> expression .
    (22) expression -> expression . PLUS expression
    (23) expression -> expression . MINUS expression
    (24) expression -> expression . TIMES expression
    (25) expression -> expression . DIVIDE expression
    (26) expression -> expression . MODULO expression
    (28) comparison -> expression . LT expression
    (29) comparison -> expression . LE expression
    (30) comparison -> expression . GT expression
    (31) comparison -> expression . GE expression
    (32) comparison -> expression . EQ expression
    (33) comparison -> expression . NE expression

    RPAREN          reduce using rule 36 (argument_list -> expression .)
    COMMA           reduce using rule 36 (argument_list -> expression .)
    PLUS            shift and go to state 35
    MINUS           shift and go to state 36
    TIMES           shift and go to state 37
    DIVIDE          shift and go to state 38
    MODULO          shift and go to state 39
    LT              shift and go to state 40
    LE              shift and go to state 41
    GT              shift and go to state 42
    GE              shift and go to state 43
    EQ              shift and go to state 44
    NE              shift and go to state 45


state 33

    (16) print_statement -> PRINT LPAREN expression . RPAREN
    (22) expression -> expression . PLUS expression
    (23) expression -> expression . MINUS expression
    (24) expression -> expression . TIMES expression
    (25) expression -> expression . DIVIDE expression
    (26) expression -> expression . MODULO expression
    (28) comparison -> expression . LT expression
    (29) comparison -> expression . LE expression
    (30) comparison -> expression . GT expression
    (31) comparison -> expression . GE expression
    (32) comparison -> expression . EQ expression
    (33) comparison -> expression . NE expression

    RPAREN          shift and go to state 53
    PLUS            shift and go to state 35
    MINUS           shift and go to state 36
    TIMES           shift and go to state 37
    DIVIDE          shift and go to state 38
    MODULO          shift and go to state 39
    LT              shift and go to state 40
    LE              shift and go to state 41
    GT              shift and go to state 42
    GE              shift and go to state 43
    EQ              shift and go to state 44
    NE              shift and go to state 45


state 34
